# server-framework

./: .gitignore  CMakeLists.txt  readme.md
include/: config.h  log.h  singleton.h  util.h
src/: config.cpp  log.cpp  util.cpp
test/: log_config_test.cpp  logtest.cpp
